create room, restriction
