# gapi/rpc_update_user.go
@@ -1,0 +1,113 @@
+package gapi
+
+import (
+	"context"
+	"time"
+
+	"errors"
+
+	"github.com/jackc/pgx/v5/pgtype"
+	db "github.com/tijanadmi/bookings_backend/db/sqlc"
+	"github.com/tijanadmi/bookings_backend/pb"
+	"github.com/tijanadmi/bookings_backend/util"
+	"github.com/tijanadmi/bookings_backend/val"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (server *Server) UpdateUser(ctx context.Context, req *pb.UpdateUserRequest) (*pb.UpdateUserResponse, error) {
+	authPayload, err := server.authorizeUser(ctx)
+	if err != nil {
+		return nil, unauthenticatedError(err)
+	}
+	violations := validateUpdateUserRequest(req)
+	if violations != nil {
+		return nil, invalidArgumentError(violations)
+	}
+
+	if authPayload.Username != req.GetEmail() {
+		return nil, status.Errorf(codes.PermissionDenied, "cannot update other user's info")
+	}
+
+	arg := db.UpdateUserParams{
+		Email: req.GetEmail(),
+		FirstName: pgtype.Text{
+			String: req.GetFirstName(),
+			Valid:  req.FirstName != nil,
+		},
+		LastName: pgtype.Text{
+			String: req.GetLastName(),
+			Valid:  req.LastName != nil,
+		},
+		Phone: pgtype.Text{
+			String: req.GetPhone(),
+			Valid:  req.Phone != nil,
+		},
+		AccessLevel: pgtype.Int4{
+			Int32: req.GetAccessLevel(),
+			Valid: req.AccessLevel != nil,
+		},
+		UpdatedAt: pgtype.Timestamptz{
+			Time:  time.Now(),
+			Valid: true,
+		},
+	}
+
+	if req.Password != nil {
+		hashedPassword, err := util.HashPassword(req.GetPassword())
+		if err != nil {
+			return nil, status.Errorf(codes.Internal, "failed to hash password: %s", err)
+		}
+
+		arg.Password = pgtype.Text{
+			String: hashedPassword,
+			Valid:  true,
+		}
+	}
+
+	user, err := server.store.UpdateUser(ctx, arg)
+	if err != nil {
+		if errors.Is(err, db.ErrRecordNotFound) {
+			return nil, status.Errorf(codes.NotFound, "user not found")
+		}
+		return nil, status.Errorf(codes.Internal, "failed to update user: %s", err)
+	}
+
+	rsp := &pb.UpdateUserResponse{
+		User: convertUser(user),
+	}
+	return rsp, nil
+}
+
+func validateUpdateUserRequest(req *pb.UpdateUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := val.ValidateEmail(req.GetEmail()); err != nil {
+		violations = append(violations, fieldViolation("email", err))
+	}
+
+	if req.FirstName != nil {
+		if err := val.ValidateName(req.GetFirstName()); err != nil {
+			violations = append(violations, fieldViolation("first_name", err))
+		}
+	}
+
+	if req.LastName != nil {
+		if err := val.ValidateName(req.GetLastName()); err != nil {
+			violations = append(violations, fieldViolation("last_name", err))
+		}
+	}
+
+	if req.Password != nil {
+		if err := val.ValidatePassword(req.GetPassword()); err != nil {
+			violations = append(violations, fieldViolation("password", err))
+		}
+	}
+
+	if req.Phone != nil {
+		if err := val.ValidatePhone(req.GetPhone()); err != nil {
+			violations = append(violations, fieldViolation("phone", err))
+		}
+	}
+
+	return violations
+}
